# proxy-wasm-wasmedge-demo

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
host/: CMakeLists.txt  main.cc
plugin/: CMakeLists.txt  plugin.cc
scripts/: build_and_run.sh
